fix edp nav z-index bug (#1892)

--- a/curiositymachine/static/less/new-header.less
+++ b/curiositymachine/static/less/new-header.less
@@ -21,7 +21,7 @@ background-color: @primary-light;
   min-height: 60px;
   border-radius: 0;
   border: 0;
-  z-index: 3;
+  z-index: 4;
 }
 
 .navbar-collapse {
